Bug 488079 - Name of last font to select is cut - visible is only couple pixels
Summary: Name of last font to select is cut - visible is only couple pixels
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: font (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: qt6, wayland-only
: 452371 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-06-05 15:55 UTC by Piotr Mierzwinski
Modified: 2024-07-31 14:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
select font - window (56.85 KB, image/png)
2024-06-05 15:55 UTC, Piotr Mierzwinski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2024-06-05 15:55:29 UTC
Created attachment 170172 [details]
select font - window

SUMMARY
Last font on the list achieved by:
Settings -> Edit Current Profile -> Appearance and click the button to chose (related with font). In result we get font selector window. Needs to scroll to the bottom in list calling "Font". Result is visible in attached screenshot (name is in big part cut - only visible is top couple pixels).

STEPS TO REPRODUCE
1. Select Settings -> Edit Current Profile -> Appearance and click button chose (related with font)
2. In font selector window please  scroll down to the bottom this list
3. 

OBSERVED RESULT
name of font is in big part cut - only is visible its top couple pixels

EXPECTED RESULT
should be visible whole name of font to be able to select it

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Comment 1 Kurt Hindenburg 2024-06-05 23:33:13 UTC
Yes, I thought there was another BR about this.   It is a known issue that I think needs fixed in Qt or KDE frameworks.
Comment 2 Bug Janitor Service 2024-06-09 17:46:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/252
Comment 3 Christoph Cullmann 2024-06-09 18:16:43 UTC
*** Bug 452371 has been marked as a duplicate of this bug. ***
Comment 4 Andrea Ippolito 2024-06-09 18:28:39 UTC
452371 Is now two years old, why not keep that one and close this one as dupe? I think it better reflects the sense of urgency and I think it's good practice in general to keep the first report open and dupe the ones that follow, just my thought.

My report also covers the font selection for the entire desktop UI via system settings (on top of Console), while this one's specific to Console. I just want to make sure the issue in the System Settings module doesn't end up going unnoticed.

Thanks
Comment 5 Christoph Cullmann 2024-07-31 14:02:08 UTC
Git commit 1a2c1e29ece234c44ba94d7c83b108447a3bd1f1 by Christoph Cullmann, on behalf of Christoph Cullmann.
Committed on 31/07/2024 at 13:56.
Pushed by cullmann into branch 'master'.

fix that last line in fonts list is only half visible

M  +7    -3    src/kfontchooser.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/-/commit/1a2c1e29ece234c44ba94d7c83b108447a3bd1f1