fix that last line in fonts list is only half visible

BUG: 488079